cloudmodule-main/to-do-app-k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: to-do-app
  name: todo-app-service
  labels:
    name: todo-app
spec:  
  selector:
    app: todo-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: my-app.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: todo-app-service
                port:
                  number: 80
